--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "firebase": "^10.12.4",
+        "jspdf": "^2.5.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.25.1",
